--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             width: 100%;
             height: 300px;
 
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.chosun.com/resizer/iksb_GxiHITk5APwQXOhvaiKYTc=/616x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/MEDK65WNXBHK5OR7CXLNJXPMZA.jpg');
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cnn.com%2F2022%2F11%2F07%2Ffootball%2Fchampions-league-last-16-real-madrid-liverpool-spt-intl%2Findex.html&psig=AOvVaw3GZCQ6y4VQTDdN1SWE0Fns&ust=1678715592428000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCLC6w4fF1v0CFQAAAAAdAAAAABAD');
             background-position: center 30%;
             background-size: cover;
 
@@ -126,7 +126,7 @@
 
 <body>
     <div class="mypic">
-        <h1>Artist Name Fan Book</h1>
+        <h1>Real Madrid Fan Book</h1>
         <p>Current Temperature: <span id="temp">36</span>degrees</p>
     </div>
     <div class="mypost">
