--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             width: 100%;
             height: 300px;
 
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cnn.com%2F2022%2F11%2F07%2Ffootball%2Fchampions-league-last-16-real-madrid-liverpool-spt-intl%2Findex.html&psig=AOvVaw3GZCQ6y4VQTDdN1SWE0Fns&ust=1678715592428000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCLC6w4fF1v0CFQAAAAAdAAAAABAD');
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://rare-gallery.com/uploads/posts/1238556-real-madrid-soccer-cristiano-ronaldo.jpg');
             background-position: center 30%;
             background-size: cover;
 
