--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="Real Madrid Fanbook" />
+    <meta property="og:description" content="This website was created so that fans can convey their messages to their idols" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        integrity = "sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin = "anonymous" ></script>
 
     <title>Fan Book</title>
 
@@ -63,10 +68,10 @@
         }
     </style>
     <script>
-        $(document).ready(function () {
-            set_temp();
-            show_comment();
-        });
+            $(document).ready(function () {
+                set_temp();
+                show_comment();
+            });
         function set_temp() {
             $.ajax({
                 type: "GET",
@@ -84,7 +89,7 @@
             $.ajax({
                 type: 'POST',
                 url: '/homework',
-                data: { 
+                data: {
                     'name_give': name,
                     'comment_give': comment,
                 },
