--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="Real Madrid Fanbook" />
     <meta property="og:description" content="This website was created so that fans can convey their messages to their idols" />
-    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
+    <meta property="og:image" content="{{ url_for('fb','fanbook','static', filename='ogimage.jpg') }}" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
