--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:type" content="website" />
     <meta property="og:title" content="Real Madrid Fanbook" />
-    <meta property="og:description"
-        content="This is for realmadrid fans" />
-    <meta property="og:url" content="https://real-madrid-fan-book.glitch.me/" />
-    <meta property="og:image"
-        content="https://cdn.antaranews.com/cache/800x533/2023/02/12/000_33938W9.jpg" />
+    <meta property="og:description" content="This website was created so that fans can convey their messages to their idols" />
+    <meta property="og:image" content="{{ url_for('D:\Azzamcoding\fb\fanbook\static', filename='ogimage.jpg') }}" />
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
