--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+
+
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Real Madrid Fanbook" />
-    <meta property="og:description" content="This website was created so that fans can convey their messages to their idols" />
-    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
+    <meta property="og:description"
+        content="Website For real madrid fan." />
+    <meta property="og:image" itemprop="image"
+        content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmqTqyW3ZiH4a4ivDV3FCOVqmLyL_U4nF_pw&usqp=CAU" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
