--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Real Madrid Fanbook" />
-    <meta property="og:description"
+    <meta property="og:description" itemprop="description"
         content="Website For real madrid fan." />
     <meta property="og:image" itemprop="image"
         content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmqTqyW3ZiH4a4ivDV3FCOVqmLyL_U4nF_pw&usqp=CAU" />
