--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Real Madrid Fanbook" />
-    <meta property="og:description" itemprop="description"
+    <meta property="og:description" 
         content="Website For real madrid fan." />
     <meta property="og:image" itemprop="image"
-        content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmqTqyW3ZiH4a4ivDV3FCOVqmLyL_U4nF_pw&usqp=CAU" />
+        content="https://real-madrid-world-fanspage.glitch.me/static/ogimage.jpg" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
