--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Real Madrid Fanbook" />
     <meta property="og:description" 
         content="Website For real madrid fan." />
-    <meta property="og:image" itemprop="image"
+    <meta property="og:image:width" itemprop="image"
         content="https://real-madrid-world-fanspage.glitch.me/static/ogimage.jpg" />
 
 
