--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" 
         content="Website For real madrid fan." />
     <meta property="og:image" itemprop="image"
-        content="https://real-madrid-world-fanspage.glitch.me/static/ogimage.jpg" />
+        content="https://jelly-swamp-sailboat.glitch.me/static/ogimage.jpg" />
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
